--- a/css/basic.css
+++ b/css/basic.css
@@ -3,17 +3,18 @@
 
 /* Layout för header */
 
-#topbar{background-color:#51473D; width:960px; height:300px; float:left;}
+#topbar{background-color:#51473D; width:600px; height:220px; background-image:url(pics/coffey.jpg); background-repeat:no-repeat; background-position:0px 20px;}
 
 /* Layout menu */
-#menu li{display:inline-block;margin-right:-2px; background-color:#797066; color:#EAE7D2;}
+#menu{width:600px; height:37px;background-color:#51473D;}
+#menu li{display:inline-block;margin-right:-3px; background-color:#797066; color:#EAE7D2; position:relative; top:-29px; left:-30px;}
 #menu li a:first-letter{text-transform:uppercase;}
-#menu li a:link{display:inline-block; text-decoration:none; color:#EAE7D2; padding:10px 15px;}
+#menu li a:link{display:inline-block; text-decoration:none; color:#EAE7D2; padding:7px 20px;}
 #menu li a:visited{color:inherit;}
 #menu li a:hover{background-color:#9C9084;}
 #menu li.active{text-decoration:none;background-color:#EAE7D2; color:#888076;}
 /* Layout container */
-#container{max-width:960px; margin:0 auto;background-color:#EAE7D2;}
+#container{max-width:600px; margin:0 auto;background-color:#EAE7D2;}
 /*Maincontent layout */
 #maincontent{}
 #maincontent h1{}
